ConsultSection mobile Fix

--- a/src/app/components/ConsultationForm/ConsultationForm.module.css
+++ b/src/app/components/ConsultationForm/ConsultationForm.module.css
@@ -334,12 +334,12 @@
   
   .personImage {
     float: left;
-    height: 391px;
+    height: 292px;
   }
 
    .documentImage {
     float: right;
-    height: 322px;
+    height: 250px;
    }
   
   .submitButton {
@@ -395,8 +395,5 @@
     aspect-ratio: 1/1 !important; /* Делаем квадратными */
     margin: 0 !important;
     overflow: hidden !important;
-  }
-  .documentImage {
-    height: 156px;
   }
 }
